welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: unclosed character literal
while(litMessage()!='')
                    ^BDRBuggle:39: error: illegal start of simple expression
	}
        ^